# ai_tools_route

./: pyproject.toml
src/: __init__.py
src/ai-tools-route/: app.py
src/ai-tools-route/extract/: extractor.py
src/ai-tools-route/tags/: classifier.py
src/ai-tools-route/tools/: calculator_tool.py  router.py  wikipedia_tool.py
src/ai_tools_route/: app.py
src/ai_tools_route/agents/: conversational_agent.py
src/ai_tools_route/extract/: extractor.py  person.py
src/ai_tools_route/tags/: classification.py  classifier.py
src/ai_tools_route/tools/: weather_tool.py
