[project]
name = "ai_tools_route"
version = "0.1.0"
description = ""
authors = [
    {name = "Prakash Mani",email = "m.praki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv",
    "langchain[google-genai]==0.3.25",
    "google-genai",
    "pydantic",
    "wikipedia",
    "param",
    "panel"
]

[tool.poetry]
packages = [{include = "ai_tools_route", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
